<resources>
    <string name="app_name">BIGS</string>
    <string name="BIGS">Belitong Geopark Information and Guidance System</string>
    <string name="explore_now">Explore Now</string>

    <string name="sign_up">Sign Up</string>
    <string name="email">Email Address</string>
    <string name="full_name">Full Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>

    <string name="already_have_an_account">Already have an account?</string>
    <string name="login">Sign In</string>

    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="dont_have_an_account">Don’t have an account?</string>

    <string name="or">OR</string>

    <string name="login_with_google">Sign In with Google</string>

    <string name="geosites">Geosites</string>
    <string name="punai_beach">Punai Beach</string>
    <string name="punai_beach_detail">The Punai Beach area is another example of a coastal rock formation in Belitong.</string>

    <string name="tour_guide_name">Tour Guide Name/Contact:</string>
    <string name="instance">Instance/Personal Name:</string>
    <string name="tour_date">Tour Date:</string>
    <string name="phone_number_colon">Phone Number:</string>
    <string name="status">Status:</string>
    <string name="program">Program:</string>

    <string name="cancel">Cancel</string>

    <string name="category">Category:</string>
    <string name="name">Name:</string>
    <string name="short_desc">Short Description:</string>
    <string name="place">Place:</string>
</resources>
