<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/CardView.Light"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="12dp"
    android:clickable="true"
    android:focusable="true"
    android:orientation="horizontal"
    app:cardCornerRadius="12dp"
    app:cardElevation="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingVertical="16dp"
        android:paddingStart="16dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_title_geosite_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/Text.Medium.Subheader"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Most Hill" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_view1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:alpha="0.4"
            android:text="@string/tour_guide_name"
            android:textAppearance="@style/Text.Regular.Subtitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title_geosite_order" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_tour_guide_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/Text.Regular.Subtitle"
            app:layout_constraintEnd_toEndOf="@id/vertical_guideline"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_view1"
            tools:text="Givan Massa" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_view2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:alpha="0.4"
            android:text="@string/booking_date"
            android:textAppearance="@style/Text.Regular.Subtitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_tour_guide_name" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_booking_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/Text.Regular.Subtitle"
            app:layout_constraintEnd_toEndOf="@id/vertical_guideline"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_view2"
            tools:text="Sat, 5 June 2023 at 08.00 WIB" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_view3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:alpha="0.4"
            android:text="@string/tour_date"
            android:textAppearance="@style/Text.Regular.Subtitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_booking_date" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_tour_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/Text.Regular.Subtitle"
            app:layout_constraintEnd_toEndOf="@id/vertical_guideline"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_view3"
            tools:text="Sat, 6 June 2023 at 10.00 WIB" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_view4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:alpha="0.4"
            android:text="@string/contact"
            android:textAppearance="@style/Text.Regular.Subtitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_tour_date" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_tour_guide_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/Text.Regular.Subtitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_view4"
            tools:text="08123456789" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_view5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:alpha="0.4"
            android:text="@string/program"
            android:textAppearance="@style/Text.Regular.Subtitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_tour_guide_phone" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_program_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/Text.Regular.Subtitle"
            app:layout_constraintEnd_toEndOf="@id/vertical_guideline"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_view5"
            tools:text="Geo-Education" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_view6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:alpha="0.4"
            android:text="@string/status"
            android:textAppearance="@style/Text.Regular.Subtitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_program_name" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:background="@drawable/bg_text_view"
            android:backgroundTint="@color/md_theme_dark_secondary"
            android:paddingHorizontal="20dp"
            android:paddingVertical="4dp"
            android:textAppearance="@style/Text.SemiBold.Title"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_view6"
            tools:text="Pending" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iv_order_geosite"
            android:layout_width="0dp"
            android:layout_height="130dp"
            android:layout_marginStart="18dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="12dp"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toTopOf="@id/btn_cancel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.76"
            app:layout_constraintStart_toStartOf="@id/vertical_guideline"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Medium"
            tools:src="@tools:sample/backgrounds/scenic" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/md_theme_light_error"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textAppearance="@style/Text.Regular.Title"
            android:textColor="@android:color/white"
            app:cornerRadius="12dp"
            app:layout_constraintEnd_toEndOf="@id/iv_order_geosite"
            app:layout_constraintHorizontal_bias="0.483"
            app:layout_constraintStart_toStartOf="@id/iv_order_geosite"
            app:layout_constraintTop_toBottomOf="@id/iv_order_geosite" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/vertical_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.55" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>